part2/factorial-cache/factorial-cache-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-factorial-cache-app
  namespace: factorial
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: factorial-cache-app
  template:
    metadata:
      labels:
        app: factorial-cache-app
    spec:
      terminationGracePeriodSeconds: 60
      volumes:
        - name: cache-volume
          emptyDir:
            medium: Memory
        - name: log-volume
          persistentVolumeClaim:
            claimName: cache-log-storage-claim
      containers:
        - name: factorial
          image: 031wnstjd/factorial-cache-app:0.0.3
          imagePullPolicy: Always # Local에 있는 이미지를 사용하지 않고 항상 이미지를 pull 해온다 (운영에서는 사용하지 않기를 권장)
          volumeMounts:
            - mountPath: /factorial/logs
              name: log-volume
            - mountPath: /factorial/cache
              name: cache-volume
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","sleep 10"]
          readinessProbe:
            httpGet:
              path: /probe/healthcheck
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 1
            successThreshold: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /probe/healthcheck
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 1
            failureThreshold: 7
